# docs/swagger.json
@@ -39,6 +39,33 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "根据ID删除用户",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "删除用户",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ids",
+                        "name": "ids",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                }
             }
         },
         "/api/v1/users/:id": {
@@ -83,6 +110,9 @@
                     "description": "生日",
                     "type": "string"
                 },
+                "created_at": {
+                    "type": "string"
+                },
                 "email": {
                     "description": "邮箱",
                     "type": "string"
@@ -90,6 +120,10 @@
                 "gender": {
                     "description": "性别",
                     "type": "string"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "0"
                 },
                 "lastLoginAt": {
                     "description": "最近登录时间",
@@ -115,8 +149,11 @@
                     "description": "状态",
                     "type": "string"
                 },
+                "updated_at": {
+                    "type": "string"
+                },
                 "username": {
-                    "description": "// @swaggo.ignore\ngorm.Model\n用户名",
+                    "description": "用户名",
                     "type": "string"
                 }
             }
