# internal/controllers/user_controller.go
@@ -1,12 +1,14 @@
 package controllers
 
 import (
+	"errors"
+	"log"
+
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
 
 	"myapp/internal/models"
 	"myapp/internal/services"
-	"net/http"
 	"strconv"
 )
 
@@ -25,19 +27,16 @@ func NewUserController() *UserController {
 // @Produce      json
 // @Router       /api/v1/users [get]
 // @Success 200 {object} models.User
-func (ctrl *UserController) CreateUser(c *gin.Context) {
+func (ctrl *UserController) CreateUser(c *gin.Context) (interface{}, error) {
 	var user models.User
 	if err := c.ShouldBindJSON(&user); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
+		return nil, err
 	}
 
 	if err := ctrl.Service.CreateUser(&user); err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed " + err.Error()})
-		return
+		return nil, err
 	}
-
-	c.JSON(http.StatusCreated, user)
+	return user, nil
 }
 
 // @Summary      获取用户
@@ -47,26 +46,40 @@ func (ctrl *UserController) CreateUser(c *gin.Context) {
 // @Produce      json
 // @Router       /api/v1/users/:id [post]
 // @Success 200 {object} models.User
-func (ctrl *UserController) GetUserByID(c *gin.Context) {
+func (ctrl *UserController) GetUserByID(c *gin.Context) (interface{}, error) {
 	idStr := c.Param("id")
 
 	id, err := strconv.ParseUint(idStr, 10, 32)
 
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invaild user ID"})
-		return
+		return nil, errors.New("Invaild user ID")
 	}
 
 	user, err := ctrl.Service.GetUserByID(uint(id))
 	if err != nil {
 		if err == gorm.ErrRecordNotFound {
-			c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
-			return
+			return nil, errors.New("User not found")
 		}
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Database err"})
-		return
+		return nil, errors.New("Database err")
 	}
+	return user, nil
+}
 
-	c.JSON(http.StatusOK, user)
-
+// @Summary      删除用户
+// @Description  根据ID删除用户
+// @param       ids query    string  true  "ids"
+// @Tags         users
+// @Produce      json
+// @Router       /api/v1/users [delete]
+// @Success 200 {object} models.User
+func (ctrl *UserController) DeleteUser(c *gin.Context) (interface{}, error) {
+	var req models.DeleteRequest
+	log.Printf(c.Param("ids"))
+	if err := c.ShouldBindJSON(&req); err != nil {
+		return nil, err
+	}
+	if err := ctrl.Service.DeleteUser(req.IDS); err != nil {
+		return nil, err
+	}
+	return "删除成功", nil
 }
